<resources>
    <string name="app_name">workshopTest</string>
    <string name="action_settings">Settings</string>
    <string name="login_error">Erro ao efetuar login.</string>
    <string name="register">Cadastrar</string>
    <string name="name">Nome</string>
    <string name="cpf">Cpf</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="error_email">E-mail inválido.</string>
    <string name="error_cpf">Cpf inválido.</string>
    <string name="error_password">A senha deve ter no mínimo 8 caracteres, uma letra maiscula, uma letra minuscula e um caracter especial.</string>
    <string name="error_name">Nome inválido.</string>
    <string name="required">*Obrigatório</string>
    <string name="not_registered">Não possuo cadastro. Quero me cadastrar.</string>
    <string name="successful_registration">Cadastro realizado com sucesso.</string>
    <string name="successful_login">Login efetuado com sucesso!!!</string>
    <string name="btn_successful_reistration">OK</string>




</resources>
