<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.LoginActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <!--  <include layout="@layout/content_main"/>-->
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".view.activity.LoginActivity"
            tools:showIn="@layout/activity_main">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:hint="@string/name"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error"
                tools:ignore="MissingConstraints">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_cpf"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_marginTop="8dp"
                android:hint="@string/cpf"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error"
                app:layout_constraintTop_toBottomOf="@+id/txt_name"
                tools:ignore="MissingConstraints">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_edit_cpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error"
                app:layout_constraintTop_toBottomOf="@+id/txt_cpf"
                tools:ignore="MissingConstraints">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error"
                app:layout_constraintTop_toBottomOf="@+id/txt_email"
                tools:ignore="MissingConstraints">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>


        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="@dimen/fab_margin"
            android:background="@color/colorPrimary"
            android:onClick="onRegister"
            android:text="@string/register"
            android:textColor="@color/colorWhite" />

    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>